fixed default style for <select> tag on iOS (1)

--- a/nam-to-ink/src/index.css
+++ b/nam-to-ink/src/index.css
@@ -84,6 +84,11 @@
   background-color: rgba(255, 255, 255, 0.6);
 }
 
+.contact-column form select {
+  color: #8e8e8e;
+  text-decoration: none;
+}
+
 .contact-column form textarea {
   resize: none;
 }
